--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require-dev": {
         "mikey179/vfsStream": "dev-master",
         "phpunit/phpunit": "dev-master",
-        "mockery/mockery": "dev-master@dev"
+        "mockery/mockery": "dev-master@dev",
+        "illuminate/config" : "4.0.x"
     },
     "autoload": {
         "psr-0": {
