--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "mikey179/vfsStream": "dev-master",
         "phpunit/phpunit": "dev-master",
         "mockery/mockery": "dev-master@dev",
-        "illuminate/config" : "4.0.x"
+        "illuminate/config" : "4.0.x",
+        "illuminate/events" : "4.0.x",
+        "illuminate/console": "4.0.x"
     },
     "autoload": {
         "psr-0": {
