--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.0.x",
-        "illuminate/workbench" : "4.0.x"
+        "illuminate/workbench": "4.0.x"
     },
     "require-dev": {
         "mikey179/vfsStream": "dev-master",
-        "phpunit/phpunit": "dev-master",
+        "phpunit/phpunit": "3.7.*@dev",
         "mockery/mockery": "dev-master@dev",
-        "illuminate/config" : "4.0.x",
-        "illuminate/events" : "4.0.x",
+        "illuminate/config": "4.0.x",
+        "illuminate/events": "4.0.x",
         "illuminate/console": "4.0.x"
     },
     "autoload": {
