--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.0.x",
-        "illuminate/workbench": "4.0.x"
+        "illuminate/workbench": "4.0.x",
+        "eviweb/illuminate-support": "dev-master"
     },
     "require-dev": {
         "mikey179/vfsStream": "dev-master",
