--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: php
 
-php: 
-  - 5.3
-  - 5.4
-  - 5.5
+jobs:
+  include:
+    - php: "5.3"
+      dist: "precise"
+    - php: "5.4"
+      dist: "trusty"
+    - php: "5.5"
+      dist: "trusty"
+    - php: "5.6"
+      dist: "trusty"
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
